WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220181
[WASM-References] Fix table.init and table.grow to satisfy the spec
https://bugs.webkit.org/show_bug.cgi?id=220181
Summary
[WASM-References] Fix table.init and table.grow to satisfy the spec
Dmitry
Reported
2020-12-27 18:49:24 PST
[WASM-References] Fix table.init and table.grow to satisfy the spec
Attachments
Patch
(30.37 KB, patch)
2020-12-27 18:51 PST
,
Dmitry
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dmitry
Comment 1
2020-12-27 18:51:39 PST
Created
attachment 416827
[details]
Patch
Yusuke Suzuki
Comment 2
2020-12-27 18:58:30 PST
Comment on
attachment 416827
[details]
Patch r=me
Yusuke Suzuki
Comment 3
2020-12-27 19:16:16 PST
Checking EWS is green before putting cq+.
EWS
Comment 4
2020-12-27 20:41:25 PST
Committed
r271100
: <
https://trac.webkit.org/changeset/271100
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416827
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-12-27 20:42:16 PST
<
rdar://problem/72696666
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug