[WASM-References] Fix table.init and table.grow to satisfy the spec https://bugs.webkit.org/show_bug.cgi?id=220181

Patch by Dmitry Bezhetskov <dbezhetskov@igalia.com> on 2020-12-27
Reviewed by Yusuke Suzuki.

JSTests:

Fix behaviour of the previous tests and added ref-types
spec tests for bulk operations and table.grow.

* wasm.yaml:
* wasm/references-spec-tests/bulk.wast.js: Added.
* wasm/references-spec-tests/table_grow.wast.js: Added.
* wasm/references/table_misc.js:
(TableSize.0.End.End.WebAssembly):

Source/JavaScriptCore:

Fix and refactor a little bit table.init and
table.grow.

* wasm/WasmOperations.cpp:
(JSC::Wasm::JSC_DEFINE_JIT_OPERATION):
* wasm/WasmOperations.h:
* wasm/WasmSlowPaths.cpp:
(JSC::LLInt::WASM_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/232697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271100 268f45cc-cd09-0410-ab3c-d52691b4dbfc